# mobile-proxy

./: .gitignore  AIRPLANE_TIMING_STUDY_2026_06_03.md  ANDROID_TUNNEL_ARCHITECTURE_DECISION.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PROXY_VALIDATION_2026_06_08.md  QUICK_REFERENCE.md  README.md  REPOSITORY_MAP.md  REPRODUCIBILITY_TEST_2026_06_04.md  REVERSE_TUNNEL_ARCHITECTURE_DECISION.md  RUNTIME_LAYOUT.md  RUST_ONLY_ULTIMATE_PLAN.md  TEN_OUT_OF_TEN_VALIDATION_PLAN.md  agent-finalize-error.txt  clippy-error.txt  deny.toml  hardening-clippy-error.txt  observability-error.txt  operator-rustfmt-error.txt  rustfmt-error.txt
.agent/: 01-command-delivery-application.patch  02-command-delivery-lib.patch  03-command-delivery-state.patch  04-command-delivery-routes.patch  05-command-delivery-governance.patch  06-command-delivery-doc.patch  07-command-delivery-audit-doc.patch  NOTICE  README  SCOPE  TRIGGER  align-production-baseline-files.tar.gz.b64.00  align-production-baseline-files.tar.gz.b64.01  align-production-baseline-files.tar.gz.b64.02  align-production-baseline-files.tar.gz.b64.03  align-production-baseline-files.tar.gz.b64.04  align-production-baseline.patch.b64.00  apply_blake3_internal_migration.py  apply_command_issue_followup.py  apply_command_safety_compile_fix.py  apply_command_safety_fixup.py  apply_command_safety_followup.py  apply_durable_counters.py  apply_foundation_primitives.py  apply_persistence_health.py  apply_runtime_domain_boundary.py  apply_runtime_fingerprint_migration.py  apply_runtime_fingerprint_slice.py  apply_shared_release_integrity.py  audit_internal_digests.py  build.py  device-heartbeat-files.tar.gz.b64.00  device-heartbeat-files.tar.gz.b64.01  device-heartbeat-files.tar.gz.b64.02  device-heartbeat-files.tar.gz.b64.03  device-heartbeat-files.tar.gz.b64.04  exact-session-binding.py.gz.b64  exact-session-binding.py.gz.b64.00  exact-session-binding.py.gz.b64.01  exact-session-binding.py.gz.b64.02  (+41 more)
.agent/runtime-fingerprint-payload/: chunk-00  chunk-01  chunk-02  chunk-03  chunk-04  chunk-05  chunk-06  chunk-07
.github/: agent_freshness.py  agent_freshness_fix.py  agent_freshness_polish.py  agent_observability.py  agent_observability_fix.py  agent_observability_fix2.py  agent_observability_fix3.py  agent_observability_fix4.py  agent_observability_fix5.py  agent_observability_fix6.py  agent_observability_fix7.py  agent_operator_observability.py  agent_operator_observability_fix.py  agent_polish.py
.github/workflows/: agent-align-production-baseline-builder.yml  agent-apply-session-binding.yml  agent-blake3-internal-migration-builder.yml  agent-command-issue-builder.yml  agent-command-publish-diagnostic.yml  agent-device-heartbeat-builder.yml  agent-diagnose-session-binding.yml  agent-durable-counter-builder.yml  agent-exact-session-binding-builder.yml  agent-exact-session-binding-inspect.yml  agent-exact-session-binding-start-marker.yml  agent-exact-session-code-inspect.yml  agent-finalize-session-binding-pr.yml  agent-finalize-session-binding.yml  agent-foundation-primitives-builder.yml  agent-internal-digest-audit.yml  agent-persistence-health-builder.yml  agent-public-probe-builder.yml  agent-run-session-binding-pr.yml  agent-run-session-binding-v2.yml  agent-run-session-binding.yml  agent-runtime-domain-boundary-builder.yml  agent-runtime-fingerprint-builder.yml  agent-tcp-session-binding.yml  command-delivery-builder.yml  device-registration-builder.yml  governance-unescape-builder.yml  open-pending-stream-audit-pr.yml  phase-b-builder.yml  plan-software-complete-builder.yml  registration-hardening-builder.yml  (+24 more)
.tmp/: modify_process.py  retire-json-runtime.patch.b64.part1  retire_json.py  update_digest_invariants.py  update_docs.py
apps/operator-cli/: Cargo.toml
apps/operator-cli/src/: android_app.rs  artifacts.rs  cli.rs  commands.rs  device.rs  device_stack.rs  http.rs  main.rs  provision.rs  release_integrity.rs  secrets.rs  vm.rs
config/: control-plane.example.env  device-runtime.example.env  host-daemon.example.env  operator-cli.example.env  relay-gate.example.env
crates/control-plane-sqlite/: Cargo.toml
crates/control-plane-sqlite/src/: legacy_json_import.rs  legacy_json_import_tests.rs  lib.rs  snapshot.rs  snapshot_compare_and_swap.rs  snapshot_compare_and_swap_tests.rs  snapshot_error.rs  snapshot_rows.rs  snapshot_store.rs  snapshot_store_tests.rs  snapshot_tests.rs  snapshot_validation.rs  tests.rs
crates/reverse-tunnel/: Cargo.toml
crates/reverse-tunnel/src/: lib.rs  model.rs  state.rs  tunnel.rs
crates/reverse-tunnel/tests/: hybrid_tls_fallback.rs
docs/: PRODUCTION_BASELINE_PLAN.md  ULTIMATE_IMPLEMENTATION_PLAN.md  phase-a-closeout.md  phase-b-closeout-reassessment.md  phase-c-exact-session-binding.md  phase-c-pending-stream-lifecycle-audit.md  quick-reference.md  runtime-layout.md  rust-only-ultimate-plan.md
scripts/: check_architecture_boundaries.py  check_digest_policy.py  check_invariant_enforcement.py  quality-gate.sh  routes-snapshot.txt  start-local-stack.ps1  temporary_wire_explicit_state_backend.py  test-local-stack.ps1  test-public-proxy.ps1
services/control-plane/: Cargo.toml
services/control-plane/src/: auth.rs  cli.rs  cli_backend_tests.rs  fingerprint_migration.rs  main.rs  projection.rs  request_context.rs  routes.rs  state.rs  state_sqlite_backend.rs  state_sqlite_backend_tests.rs
services/control-plane/tests/: sqlite_backend_process_acceptance.rs  state_migration_cli.rs  state_migration_cli_missing_export.rs
services/host-daemon/: Cargo.toml
services/host-daemon/src/: api.rs  auth.rs  cli.rs  config.rs  control_plane.rs  fingerprints.rs  health.rs  main.rs  reverse_tunnel.rs  rotation.rs  state.rs  tunnel_counters.rs
services/relay-gate/: Cargo.toml
services/relay-gate/src/: cli.rs  main.rs  probe.rs  report.rs
services/reverse-tunnel-server/: Cargo.toml
services/reverse-tunnel-server/src/: cli.rs  main.rs
services/runtime-supervisor/: Cargo.toml
services/runtime-supervisor/src/: android.rs  cli.rs  config.rs  dns.rs  health.rs  main.rs  process.rs  runtime_adapter.rs
(+85 files in other folders)
