[workspace]
members = [
    "crates/proxy-core",
    "crates/runtime-domain",
    "crates/foundation",
    "crates/application",
    "crates/control-plane-sqlite",
    "apps/operator-cli",
    "services/host-daemon",
    "services/control-plane",
    "services/relay-gate",
    "services/reverse-tunnel-server",
    "services/runtime-supervisor",
    "crates/reverse-tunnel",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
blake3 = "1"
clap = { version = "4.5", features = ["derive", "env"] }
mobile-proxy-application = { path = "crates/application" }
mobile-proxy-foundation = { path = "crates/foundation" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
subtle = "2.5"
