[package]
name = "mobile-proxy-control-plane-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mobile-proxy-application.workspace = true
mobile-proxy-foundation.workspace = true
proxy-core = { path = "../proxy-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
