[package]
name = "reverse-tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
quinn = { version = "0.11.9", default-features = false, features = ["log", "runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
rcgen = "0.14.8"
