[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
proxy-core = { path = "../../crates/proxy-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
subtle.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
