[package]
name = "reverse-tunnel-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
reverse-tunnel = { path = "../../crates/reverse-tunnel" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
