[package]
name = "runtime-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
proxy-core = { path = "../../crates/proxy-core" }
reqwest.workspace = true
runtime-domain = { path = "../../crates/runtime-domain" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
